# chat

./: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  metadata.json
chat/: Cargo.toml
chat/src/: icon  lib.rs
debug-chats/: Cargo.toml
debug-chats/src/: lib.rs
implementation-docs/: README.md  instructions.md
pkg/: manifest.json  scripts.json
resources/example-apps/voice/: Cargo.toml
resources/example-apps/voice/voice/: Cargo.toml
resources/example-apps/voice/voice/src/: audio.rs  lib.rs
send-bulk/: Cargo.toml
send-bulk/src/: lib.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/public/: browser-chat.html
ui/src/: App.css  App.tsx  index.css  main.tsx
ui/src/components/Calls/: CallHistory.css  CallHistory.tsx
ui/src/components/Chat/: ChatHeader.css  ChatHeader.tsx  ChatSettings.css  ChatSettings.tsx  ChatView.css  ChatView.tsx  DeleteMessageModal.css  DeleteMessageModal.tsx  FileUpload.css  FileUpload.tsx  Message.css  Message.tsx  MessageInput.css  MessageInput.tsx  MessageList.css  MessageList.tsx  MessageMenu.css  MessageMenu.tsx  VoiceNote.css  VoiceNote.tsx
ui/src/components/Chats/: ChatList.css  ChatList.tsx  ChatListItem.css  ChatListItem.tsx  ChatSearch.css  ChatSearch.tsx  CreateChatLink.css  CreateChatLink.tsx  NewChatButton.css  NewChatButton.tsx  NewChatModal.css  NewChatModal.tsx
ui/src/components/Common/: Avatar.css  Avatar.tsx
ui/src/components/Groups/: GroupList.css  GroupList.tsx
ui/src/components/Settings/: GeneralSettings.css  GeneralSettings.tsx  NotificationSettings.css  NotificationSettings.tsx  ProfileSettings.css  ProfileSettings.tsx  SettingsModal.css  SettingsModal.tsx
ui/src/components/SplashScreen/: ProfileButton.css  ProfileButton.tsx  SplashScreen.css  SplashScreen.tsx  TabBar.css  TabBar.tsx
ui/src/constants/: version.ts
ui/src/store/: chat.ts
ui/src/styles/: button-selectable.css
ui/src/types/: chat.ts
ui/src/utils/: chatApi.ts  indexeddb.ts  remarkHwProtocol.ts  storage.ts  websocket.ts
