[dependencies]
anyhow = "1.0"
hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", features = ["hyperapp"], rev = "c27a881" }
process_macros = "0.1"
serde_json = "1.0"
wit-bindgen = "0.42.1"
rand = "0.8"
base64 = "0.21"

[dependencies.caller-utils]
optional = true
path = "../target/caller-utils"

[dependencies.hyperprocess_macro]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "ed99c19"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "chat"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
