[dependencies]
anyhow = "1.0"
hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", features = ["hyperapp"], rev = "b9f1ead" }
process_macros = "0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
wit-bindgen = "0.42.1"
rand = "0.8"
base64 = "0.21"
flate2 = "1.0"

[dependencies.caller-utils]
path = "../target/caller-utils"

[dependencies.hyperprocess_macro]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "ac43744"

[features]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "chat"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
