[dependencies]
anyhow = "1.0"
base64 = "0.21"
flate2 = "1.0"
process_macros = "0.1"
rand = "0.8"
serde_json = "1.0"
wit-bindgen = "0.42.1"

[dependencies.chat_caller_utils]
optional = true
path = "../target/chat-caller-utils"

[dependencies.hyperprocess_macro]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "ac43744"

[dependencies.hyperware_process_lib]
features = ["hyperapp"]
git = "https://github.com/hyperware-ai/process_lib"
rev = "b9f1ead"

[dependencies.serde]
features = [
    "derive",
    "rc",
]
version = "1.0"

[features]
caller-utils = ["chat_caller_utils"]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "chat"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
